# Amazing-Python-Scripts

./: .all-contributorsrc  .deepsource.toml  .gitignore  .gitmodules  AI_Calculator.py  Added_temperature_convertor_GUI_python_script.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Calculator.py  Code of Conduct..md  Image Processing and Computer Vision python script.ipynb  LICENSE  README.md  ReadMe.md  Readme.md  SCRIPTS.md  TO_BE_DELETED.txt  TelegramBot.py  Template for README.md  Your meeting buddy  brick breaker game.py  calculator bmi2.py  crossword.py  datastore.json  expense.db  index.html  main.py  objectdetection.py  page_contactUs.html  readme for bmi calculator2.md  readme.md  requirement.txt  requirements.txt  screenshot.py  script.py  script_updater.py  scripts.html  scripts_updater.py  solver.py  spotify.py  (+5 more)
.github/: FUNDING.yml  pull_request_template.md
.history/: SCRIPTS_20210228203100.md
2048 GAME/: README.md  game.py  logic.py
9_Typesof_Hash_Craker/: 9_Types_of_Hash_Cracker.py  README.md
A-Star-PathFindingAlgorithm-Script/: README.md  pathfinding.py
AI Based Music Composer/: README.md  music_composer.py  requirements.txt
AI Calculator/: README.md  main.py
AI Chat Bot/: README.md  main.py  requirements.txt
AI Code Reviewer/: README.md  ai_code_reviewer.py  (+1 more)
TV-Remote/: .gitignore  CHANGES.rst  MANIFEST.in  README.md  cecmap.service  setup.cfg  setup.py
TV-Remote/.github/workflows/: main.yml
TV-Remote/cecmap/: __init__.py  __main__.py  cli.py  commands.py  device.py  keycodes.py  notify.py
TV-Remote/cecmap/config/: __init__.py  default.cfg
(+2692 files in other folders)
