[metadata]
name             = cecmap
version          = attr: cecmap.__version__
description      = Maps CEC events to arbitrary keybindings for controlling your raspberrypi desktop via TV remote.
keywords         = cec keybindings raspberry pi raspberry-pi tv remote control
url              = https://github.com/coldfix/cecmap
long_description = file: README.rst, CHANGES.rst
author           = Thomas Gläßle
author_email     = thomas@coldfix.de
license          = Unlicense
license_file     = UNLICENSE
classifiers      =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Desktop Environment
    Topic :: Multimedia
    Topic :: Utilities
long_description_content_type = text/x-rst

[options]
packages =
    cecmap
    cecmap.config
zip_safe = true
include_package_data = true
python_requires = >=3.7
install_requires =
    cec
    pynput
    notify2

[options.entry_points]
console_scripts =
    cecmap = cecmap.cli:main
